syntax = "proto3";
import "google/protobuf/timestamp.proto";
option go_package = "github.com/epicseven-cup/fluffy-chain/CreateRedirect";

message CreateRedirectRequest {
	string source = 1;
	string destation = 2;
	google.protobuf.Timestamp startTime = 3;
	google.protobuf.Timestamp endTime = 4;
	bool status = 5;
}

message CreateRedirectRespond {
	string message = 1;
	google.protobuf.Timestamp startTime = 2;
	google.protobuf.Timestamp endTime = 3;
	bool status = 4;
}

service CreateRedirectService {
	rpc CreateRedirect(CreateRedirectRequest) returns (CreateRedirectRespond) {};
}

// check puff fodler